Fix for BUG#8562: In Item_int_with_ref::new_item() create Item_int or Item_uint depending on ref->unsigned_flag. Item_int_with_ref can refer to both signed and unsigned integers.

mysql-test/r/bigint.result:
  Test case for BUG#8562
mysql-test/t/bigint.test:
  Test case for BUG#8562